# ml-pipeline-airflow

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  startup.sh
dags/: ml_pipeline_dag.py
